[package]
name = "lgj2018"
version = "0.1.0"
authors = ["mraof <mraof@mraof.com>"]

[dependencies]
gfx = "*"
gfx_window_glutin = "*"
glutin = "*"
image = "*"
indexmap = "*"
#tiled = {git = "https://github.com/mraof/rs-tiled"}
tiled = {path = "/home/mraof/rs-tiled"}
rlua = "*"
palette = "*"
ncollide = "0.14"
nalgebra = "*"